istio/manifests/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-example-app-main-svc
  labels:
    app: istio-example-app-main
    service: istio-example-app-main-svc
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: istio-example-app-main
---
apiVersion: v1
kind: Service
metadata:
  name: istio-example-app-sub-svc
  labels:
    app: istio-example-app-sub
    service: istio-example-app-sub-svc
spec:
  ports:
  - port: 9081
    name: http
  selector:
    app: istio-example-app-sub
